Added support for SVGs (FFImageLoading) Added RatingIconConverter Added rating icons to recipe list

--- a/Xamarin/InstaPrep/InstaPrep.Android/InstaPrep.Android.csproj
+++ b/Xamarin/InstaPrep/InstaPrep.Android/InstaPrep.Android.csproj
@@ -58,6 +58,9 @@
     <PackageReference Include="Xamarin.CommunityToolkit">
       <Version>2.0.2</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms">
+      <Version>2.4.11.982</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -68,6 +71,9 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
+    <None Include="Resources\1Star.svg" />
+    <None Include="Resources\2Star.svg" />
+    <None Include="Resources\3Star.svg" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\styles.xml" />
