--- a/Xamarin/InstaPrep/InstaPrep/InstaPrep.csproj
+++ b/Xamarin/InstaPrep/InstaPrep/InstaPrep.csproj
@@ -9,8 +9,14 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2478" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.2" />
+    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.4.11.982" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Xamarin.CommunityToolkit" />
+    <None Remove="Xamarin.FFImageLoading.Svg.Forms" />
+    <None Remove="Converters\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Converters\" />
   </ItemGroup>
 </Project>
