--- a/Xamarin/InstaPrep/InstaPrep.iOS/InstaPrep.iOS.csproj
+++ b/Xamarin/InstaPrep/InstaPrep.iOS/InstaPrep.iOS.csproj
@@ -122,6 +122,9 @@
     <BundleResource Include="Resources\xamarin_logo%402x.png" />
     <BundleResource Include="Resources\xamarin_logo%403x.png" />
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
+    <BundleResource Include="Resources\1Star.svg" />
+    <BundleResource Include="Resources\2Star.svg" />
+    <BundleResource Include="Resources\3Star.svg" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -136,6 +139,9 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
     <PackageReference Include="Xamarin.CommunityToolkit">
       <Version>2.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms">
+      <Version>2.4.11.982</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
