RecipePage 	Added Search Entry 	Added Categories Collection View
RecipeDetails
	Added Image
	Added Details Frame

--- a/Xamarin/InstaPrep/InstaPrep.Android/InstaPrep.Android.csproj
+++ b/Xamarin/InstaPrep/InstaPrep.Android/InstaPrep.Android.csproj
@@ -74,6 +74,7 @@
     <None Include="Resources\1Star.svg" />
     <None Include="Resources\2Star.svg" />
     <None Include="Resources\3Star.svg" />
+    <None Include="Resources\previous-white.svg" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\styles.xml" />
