Added search feature by implementing a behavior

--- a/Xamarin/InstaPrep/InstaPrep.iOS/InstaPrep.iOS.csproj
+++ b/Xamarin/InstaPrep/InstaPrep.iOS/InstaPrep.iOS.csproj
@@ -152,4 +152,7 @@
       <Name>InstaPrep</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Effects\" />
+  </ItemGroup>
 </Project>
