--- a/Xamarin/InstaPrep/InstaPrep.iOS/InstaPrep.iOS.csproj
+++ b/Xamarin/InstaPrep/InstaPrep.iOS/InstaPrep.iOS.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Effects\SearchBarEffect.cs" />
     <Compile Include="Renderers\AmazingProgressBarRenderer.cs" />
+    <Compile Include="DeviceServices\Share.cs" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
@@ -116,7 +117,6 @@
     </ImageAsset>
     <BundleResource Include="Resources\icon_about.png" />
     <BundleResource Include="Resources\icon_about%402x.png" />
-    <BundleResource Include="Resources\icon_about%403x.png" />
     <BundleResource Include="Resources\icon_feed.png" />
     <BundleResource Include="Resources\icon_feed%402x.png" />
     <BundleResource Include="Resources\icon_feed%403x.png" />
@@ -129,6 +129,7 @@
     <BundleResource Include="Resources\3Star.svg" />
     <BundleResource Include="Resources\previous-white.svg" />
     <BundleResource Include="Resources\adam.png" />
+    <BundleResource Include="Resources\adam_resume.pdf" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -158,5 +159,6 @@
   <ItemGroup>
     <Folder Include="Effects\" />
     <Folder Include="Renderers\" />
+    <Folder Include="DeviceServices\" />
   </ItemGroup>
 </Project>
